--- a/AutomationPractice/pom.xml
+++ b/AutomationPractice/pom.xml
@@ -103,7 +103,7 @@
 <version>3.0.0-M5</version>
 <configuration>
 <suiteXmlFiles>
-<suiteXmlFile>******</suiteXmlFile>
+<suiteXmlFile>testng1.xml</suiteXmlFile>
 </suiteXmlFiles>
 </configuration>
 </plugin>
